# FactorySorterGame

./: CMakeLists.txt  FactoryGameApp.cpp  FactoryGameApp.h  main.cpp  pch.h
FactoryGameLib/: Bucket.cpp  Bucket.h  CMakeLists.txt  FactoryGame.cpp  FactoryGame.h  FactoryGameView.cpp  FactoryGameView.h  Item.cpp  Item.h  MainFrame.cpp  MainFrame.h  OutputMachine.cpp  OutputMachine.h  Part.cpp  Part.h  PartType.h  pch.h
Tests/: CMakeLists.txt  ItemTest.cpp
resources/: FactorySorter.rc
resources/levels/: level1.xml  level2.xml  level3.xml
resources/xrc/: FactoryGame.fbp  FactoryGame.xrc
